--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 .App {
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
+  background-color: #fefefe;
+}
+
+/* NAVBAR */
+
+nav{
+  box-sizing: border-box;
+  background-color: #C9F4AA;
+  color: #fefefe;
+  font-family: 'Francois', sans-serif;
+  padding: 0 2rem;
+  height: 10vh;
+}
+.navbar-nav{
+  position: absolute;
+  right: 0;
 }
