--- a/src/product.css
+++ b/src/product.css
@@ -1,15 +1,60 @@
+/* PRODUCT CONTAINER STYLES */
 .product-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 80%;
-    position: absolute;
     margin: auto auto;
     right: 0;
-    padding-right: 10%;
+    text-align: center;
+
 }
+
+/* PRODUCT COMPONENT */
 .product > img{
     max-width: 100%;
     max-height: 100%;
     width: 200px;
     height: 250px;
+}
+.product-title{
+    /* font-family: 'Cormorant', serif; */
+    font-weight: 700;
+    font-size: 20px;
+}
+.product-desc{
+    text-align: center;
+}
+.card-line{
+    height: 3px;
+    background-color: #C9F4AA;
+    width: 50%;
+    margin: auto;
+}
+.price{
+    color: #B2A4FF;
+    font-family: 'Fraunces', serif;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.img-container > p{
+    font-family: 'Fraunces', serif;
+    color: #fefefe;
+    font-weight: 700;
+    font-size: 3rem;
+    width: 50%;
+    text-align: left;
+
+}
+.img-container{
+    background-color: #D9C2F6;
+    height: 40vh;
+    width: 80%;
+    margin: auto auto;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.img-container > img{
+    height: 100%;
 }
