create cart side menu

--- a/src/product.css
+++ b/src/product.css
@@ -38,7 +38,7 @@
 }
 .img-container > p{
     font-family: 'Fraunces', serif;
-    color: #fefefe;
+    color: #C9F4AA;
     font-weight: 700;
     font-size: 3rem;
     width: 50%;
