--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,16 @@
 
 nav{
   box-sizing: border-box;
-  background-color: #C9F4AA;
+  background-color: #FFB4B4;
   color: #fefefe;
   font-family: 'Francois', sans-serif;
   padding: 0 2rem;
-  height: 10vh;
 }
 .navbar-nav{
   position: absolute;
   right: 0;
+  padding-right: 10%;
+}
+.navbar{
+  padding-left: 10%;
 }
