--- a/src/cart.css
+++ b/src/cart.css
@@ -30,10 +30,17 @@
 /* CART ITEMS CONTAINER END */
 
 /* GENERAL CART */
-/* .cart-container{
+.cart-container{
     display: flex;
-} */
+    background-color: none;
+}
+.exit-box{
+    color: #FFB4B4;
+    font-size: 3rem;
+    height: 60px;
+    width: 70px;
 
+}
 .cart-title-container{
     margin-top: 5vh;
     display: flex;
@@ -42,6 +49,9 @@
     border-bottom: 2px solid #EEEDED;
     height: 15%;
 }
+/* .second-container{
+  background-color: antiquewhite;
+} */
 .cart-title-container > p{
     font-size: 2rem;
     font-family: 'Fraunces', serif;
@@ -58,7 +68,6 @@
 /* CART TOTAL CONTAINER */
 .total-container{
     border-top: 2px solid #EEEDED;
-    position: absolute;
     bottom: 20px;
     width: 100%;
     height: 20%;
