--- a/src/cart.css
+++ b/src/cart.css
@@ -9,6 +9,7 @@
     width: 50px;
 }
 .single-item-text > p {
+    font-family: 'Cormorant', serif;
     text-align: right;
     margin: 0;
 }
@@ -21,10 +22,9 @@
 
 /* CART ITEMS CONTAINER */
 .cart-item-container{
-    height: 60%;
+    height: 55%;
     overflow-y: scroll;
-    padding: 50px 20px;
-    /* border: 2px solid #EEEDED; */
+    padding: 20px 20px;
 }
 
 /* CART ITEMS CONTAINER END */
@@ -36,34 +36,32 @@
     margin-top: 10vh;
 }
 .exit-box{
-    color: #FFB4B4;
+    color: #262A56;
     font-size: 3rem;
     height: 60px;
     width: 70px;
     cursor: pointer;
+    color: #B8621B;
 
 }
 .cart-title-container{
-    margin-top: 5vh;
+
+    color: #262A56;
     display: flex;
     align-items: center;
     justify-content: space-around;
     border-bottom: 2px solid #EEEDED;
     height: 15%;
 }
-/* .second-container{
-  background-color: antiquewhite;
-} */
 .cart-title-container > p{
     font-size: 2rem;
-    font-family: 'Fraunces', serif;
+    font-family: 'Francois', sans-serif;
     font-weight: 700;
-    color: #FFB4B4;
+
     margin-bottom: 0;
 }
 .cart-title-container > i{
     font-size: 2rem;
-    color: #FFB4B4;
     cursor: pointer;
 }
 
