--- a/src/cart.css
+++ b/src/cart.css
@@ -5,8 +5,9 @@
     padding: 2% 0;
 }
 .single-item-img{
-    height: 60px;
-    width: 50px;
+    height: 80px;
+    width: 70px;
+    margin: 0 20px;
 }
 .single-item-text > p {
     font-family: 'Cormorant', serif;
@@ -88,3 +89,33 @@
 /* CART TOTAL CONTAINER END */
 
 /* ITEM QUANTITES */
+.quantity-container{
+    position: relative;
+    right: 0;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: solid 1px #000;
+    /* right: 20px; */
+    width: 80px;
+    height: 30px;
+}
+.control{
+    height: 100%;
+    border: none;
+    background-color: #B8621B;
+    color:#EEEDED;
+    width: 32%;
+}
+.number{
+    padding-top: 50%;
+    transform: translateY(-20%);
+    font-weight: 400;
+}
+
+@media screen and (max-width: 550px){
+   .cart-container{
+    width: 100%;
+   }
+}
