--- a/src/product.css
+++ b/src/product.css
@@ -74,3 +74,15 @@
 .img-container > img{
     height: 100%;
 }
+
+
+@media screen and (max-width: 1000px){
+    .product-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width: 550px){
+    .product-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
